[package]
name = "gateway-auction"
version = "0.1.0"
edition = "2021"
description = "Simple auction contract for testing BidRefundedEvent emission"
license = "MIT"
keywords = ["soroban", "stellar", "auction", "smart-contract"]
categories = ["cryptography::cryptocurrencies", "no-std"]
readme = "auction.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Widens `compute_dutch_price` visibility to `pub` so the fuzz crate can call
# it without going through the full Soroban contract entry-point machinery.
fuzz = []

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }


